[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milkpay.cryptomus"
description = "A lightweight Cryptomus SDK"
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "wakaree", email = "nullmatawasoradesu@gmail.com" },
]
maintainers = [
    { name = "wakaree", email = "nullmatawasoradesu@gmail.com" },
]
keywords = [
    "crypto",
    "cryptomus",
    "payments",
    "wrapper",
    "asyncio",
    "client",
]
dependencies = [
    "pydantic>=2.4.1,<2.10",
    "stollen~=0.2.10",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/milkpay/cryptomus/__meta__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/milkpay"]

[project.optional-dependencies]
dev = [
    "black~=24.8.0",
    "ruff~=0.6.1",
    "mypy~=1.11.1",
    "pre-commit~=3.8.0"
]
[project.urls]
Repository = "https://github.com/py-stollen/milkpay-cryptomus"
"Business API documentation" = "https://doc.cryptomus.com/business"

[tool.black]
line-length = 99
target-version = ['py311']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | \.?venv
  | build
  | dist
)
'''

[tool.ruff]
target-version = "py311"
line-length = 99
lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "docs",
    "tests",
    "dev",
    "scripts",
    "*.egg-info",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [".venv", ".idea"]
